# black_magic

./: .gitignore  CMakeLists.txt  builtin_types.c  example_model.c  example_model.h  flt_values.h  main.c  metaresc.c  metaresc.h  mr_btree.c  mr_btree.h  mr_export.h  mr_extra.c  mr_hsort.c  mr_hsort.h  mr_ic.c  mr_ic.h  mr_message.c  mr_pp.h  mr_protos.h  mr_save.c  mr_save.h  mr_stringify.c  mr_stringify.h  temp.c
include/sentient/core/: checksum_types.h  decl_model.h  define_model.h  field_info.h  generic.h  hardware_traits.h  model_info.h  object_pool.h  os_wrap.h  pool.h  pool_alloc.h  pp_utils.h  type_info.h  types.h
include/sentient/core/detail/decl_model/: decl_field.h  decl_model.h  decl_object_pool.h  decl_reserved_keyword.h
include/sentient/core/detail/pp_utils/: arithmetic.h  basics.h  bool.h  cat.h  count_args.h  for.h  foreach.h  get.h  if_else.h  inc_dec.h  is_eq.h
include/sentient/core/internal/: builtin_types.h  decl_builtiin_types.h
lib/: CMakeLists.txt
lib/cmake/: autogen.cmake  build_options.cmake  gen_arithmetic.py
lib/core/: builtin_type_ids.h  checksum_types.c  model_info.c  object_pool.c  os_wrap.c  pool.c  pool_alloc.c  types.c
lib/core/internal/: object_pool_internal.c  object_pool_internal.h
